Mostly styling and navigation

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,14 @@
 ul {
   list-style: none;
 }
+
+.container {
+  /* margin-top: 100px; */
+  padding-top: 100px;
+
+}
+
+.segment {
+  overflow: auto;
+  max-height: 85vh;
+}
