--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,14 @@ ul {
 }
 
 .container {
-  /* margin-top: 100px; */
   padding-top: 100px;
-
 }
 
 .segment {
   overflow: auto;
   max-height: 85vh;
+}
+
+.header {
+  font-size: 15px;
 }
